<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:paddingLeft="@dimen/card_view_padding_horizontal"
android:paddingRight="@dimen/card_view_padding_horizontal"
android:paddingTop="@dimen/card_view_padding_vertical"
android:paddingBottom="@dimen/card_view_padding_vertical">



    <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


            <ImageView
            android:layout_centerVertical="true"
            android:id="@+id/ivLogo"
            android:contentDescription="@string/categoria_image"
            android:layout_width="@dimen/card_view_image_size"
            android:layout_height="@dimen/card_view_image_size"
            tools:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/card_view_textview_margin"
            android:layout_toEndOf="@+id/ivLogo"
            android:layout_toStartOf="@+id/btEditCategoria"
            android:id="@+id/linearLayout">
            <TextView
                android:id="@+id/tvCategoriaNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/card_view_name_size"
                tools:text="@string/categoria_nome" />

            <TextView
                android:id="@+id/tvCategoriaDescricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/card_view_description_size"
                tools:text="@string/categoria_descricao"  />

            <TextView
                android:id="@+id/tvCategoriaTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/card_view_description_size"
                tools:text="@string/categoria_tipo"  />
        </LinearLayout>
        <ImageButton
            android:layout_centerVertical="true"
            android:id="@+id/btEditCategoria"
            android:contentDescription="@string/edit_button"
            android:layout_width="@dimen/card_view_image_size"
            android:layout_height="@dimen/card_view_image_size"
            android:src="@drawable/ic_edit"
            android:layout_toStartOf="@+id/btDeleteCategoria"/>
        <ImageButton
            android:layout_centerVertical="true"
            android:id="@+id/btDeleteCategoria"
            android:contentDescription="@string/delete_button"
            android:layout_width="@dimen/card_view_image_size"
            android:layout_height="@dimen/card_view_image_size"
            android:src="@drawable/ic_deletar"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>

</LinearLayout>