<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.perfil.PerfilEditUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nomePerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/perfil_nome"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/emailPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/perfil_email"
            android:textSize="@dimen/subtitle_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/uidPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/perfil_uid"
            android:textSize="@dimen/introduction_size" />

        <TextView
            android:id="@+id/uidLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_uid"
            android:textSize="@dimen/introduction_size" />


        <TextView
            android:id="@+id/statusPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/perfil_status"
            android:textSize="@dimen/introduction_size" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="50dp"
        android:paddingEnd="50dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEnderecoEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEnderecoEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EnderecoEdit"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCidadeEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCidadeEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CidadeEdit"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEstadoEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEstadoEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EstadoEdit"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCepEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCepEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CepEdit"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLocalizacaoEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLocalizacaoEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/LocalizacaoEdit"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTelefoneEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTelefoneEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/TelefoneEdit"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabPerfilEditConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_checkmark"
        app:fabSize="normal"
        app:rippleColor="@color/secondaryColor" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabPerfilEditDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_deletar"
        app:fabSize="normal"
        app:rippleColor="@color/secondaryColor" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>
